[project]
name = "shake_n_tune"
description = "Klipper streamlined input shaper workflow and calibration tools"
readme = "README.md"
requires-python = ">= 3.9"
authors = [
  {name = "Bradford Adams", email = "bradfordaldenadams@gmail.com"}
]
keywords = ["klipper", "input shaper", "calibration", "3d printer"]
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "gitpython>=3.1.55",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "zstandard>=0.25.0",
]
[project.urls]
Repository = "https://github.com/Bradford1040/kiauh-klippain-shaketune"
Documentation = "https://github.com/Bradford1040/kiauh-klippain-shaketune/wiki"
Issues = "https://github.com/Bradford1040/kiauh-klippain-shaketune/issues"
Changelog = "https://github.com/Bradford1040/kiauh-klippain-shaketune/releases"

[tool.ruff]
line-length = 120 # We all have modern screens now and I believe this should be brought in line with current technology
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
